[project]
name = "pyautoscripts"
version = "0.1.0"
description = ""
authors = [{ name = "mudssky", email = "mudssky@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pywinauto (>=0.6.9,<0.7.0)", "psutil (>=6.1.1,<7.0.0)", "pyautogui (>=0.9.54,<0.10.0)", "pywin32 (>=308,<309)", "pillow (>=11.1.0,<12.0.0)", "numpy (>=2.2.2,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[virtualenvs]
in-project = true
